# sentiric-orchestrator

./: .context.md  Cargo.toml  Dockerfile  LOGIC.md  README.md  TASKS.md  build.rs
.github/workflows/: docker-publish.yml
docs/: 01_CLUSTER_GOVERNANCE_POLICY.md  02_ARCHITECTURE_BLUEPRINT.md
proto/: orchestrator.proto
src/: config.rs  index.html  main.rs  telemetry.rs
src/adapters/: docker.rs  mod.rs  system.rs
src/api/: grpc.rs  mod.rs  routes.rs
src/core/: domain.rs  governor.rs  mod.rs
src/ui/: index.html
src/ui/css/: layout.css  theme.css
src/ui/js/: app.js  store.js  websocket.js
src/ui/js/components/: topology.js
