[package]
name = "sentiric-orchestrator"
version = "5.4.1"
edition = "2021"

[dependencies]
# Web & Async
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] } # Upstream Client

# System & Docker
bollard = "0.16"
sysinfo = "0.31" 

# gRPC & Proto
tonic = "0.12"
prost = "0.13"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Utils
anyhow = "1.0"
hostname = "0.3"
lazy_static = "1.4"
regex = "1.10"

[build-dependencies]
tonic-build = "0.12"